# rust_simp

./: Cargo.toml  README.MD  output.ll  output.s  program  simp.txt
src/: main.rs
src/interpreter/: mod.rs  simp_big_step.rs
src/ir/: llvm_ir.rs  mod.rs
src/semantic/: mod.rs  type_inf.rs
src/syntax/: ast.rs  lexer.rs  parser.rs
